Ajustes no application.yml.
